--- a/index.html
+++ b/index.html
@@ -160,41 +160,44 @@
     }
 
     /* Responsive Design */
-    @media (max-width: 600px) {
-      form {
-        margin: 0 15px;
-        padding: 20px;
-        border-radius: 10px;
-      }
+  @media (max-width: 600px) {
+  body {
+    padding: 20px;
+  }
 
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 20px;
-      }
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
 
-      button[type="submit"] {
-        font-size: 16px;
-      }
+  form {
+    margin: 0 auto;
+    padding: 20px;
+    width: 95%;
+    max-width: 400px;
+  }
 
-      label,
-      input,
-      select {
-        font-size: 14px;
-      }
+  label,
+  input,
+  select,
+  button[type="submit"] {
+    font-size: 15px;
+    line-height: 1.4;
+  }
 
-      footer {
-        margin-top: 30px;
-        font-size: 11px;
-        padding: 4px;
-      }
+  footer {
+    font-size: 11px;
+    margin-top: 25px;
+  }
 
-      #toggle-theme,
-      #toggle-language {
-        top: 8px;
-        font-size: 12px;
-        padding: 4px 8px;
-      }
-    }
+  #toggle-theme,
+  #toggle-language {
+    top: 8px;
+    padding: 4px 8px;
+    font-size: 12px;
+  }
+}
+
   </style>
 </head>
 <body class="theme-dark">
