--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
       font-size: 2.5rem;
       letter-spacing: 1px;
     }
-   form {
-  background-color: var(--form-bg);
-  padding: 25px;
-  border-radius: 12px;
-  width: 90%;
-  max-width: 400px;
-  margin: 0 auto;
-  box-shadow: 0 0 25px rgba(0, 255, 213, 0.5);
-  text-align: right;
-  transition: background-color 0.3s, box-shadow 0.3s;
-}
+    form {
+      background-color: var(--form-bg);
+      padding: 25px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 400px;
+      margin: 0 auto;
+      box-shadow: 0 0 25px rgba(0, 255, 213, 0.5);
+      text-align: right;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
     label {
       display: block;
       margin: 12px 0 6px 0;
@@ -95,6 +95,7 @@
       background-color: var(--input-bg);
       color: var(--text-color);
       transition: all 0.3s ease;
+      box-sizing: border-box;
     }
     input:focus,
     select:focus {
@@ -160,44 +161,38 @@
     }
 
     /* Responsive Design */
-  @media (max-width: 600px) {
-  body {
-    padding: 20px;
-  }
-
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-
-  form {
-    margin: 0 auto;
-    padding: 20px;
-    width: 95%;
-    max-width: 400px;
-  }
-
-  label,
-  input,
-  select,
-  button[type="submit"] {
-    font-size: 15px;
-    line-height: 1.4;
-  }
-
-  footer {
-    font-size: 11px;
-    margin-top: 25px;
-  }
-
-  #toggle-theme,
-  #toggle-language {
-    top: 8px;
-    padding: 4px 8px;
-    font-size: 12px;
-  }
-}
-
+    @media (max-width: 600px) {
+      body {
+        padding: 20px;
+      }
+      h1 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+      }
+      form {
+        margin: 0 auto;
+        padding: 20px;
+        width: 95%;
+        max-width: 400px;
+      }
+      label,
+      input,
+      select,
+      button[type="submit"] {
+        font-size: 15px;
+        line-height: 1.4;
+      }
+      footer {
+        font-size: 11px;
+        margin-top: 25px;
+      }
+      #toggle-theme,
+      #toggle-language {
+        top: 8px;
+        padding: 4px 8px;
+        font-size: 12px;
+      }
+    }
   </style>
 </head>
 <body class="theme-dark">
@@ -207,16 +202,20 @@
   <form action="result.html" method="get" id="calc-form">
     <label for="weight" id="label-weight">Weight (kg):</label>
     <input type="number" id="weight" name="weight" min="1" max="300" required />
+
     <label for="height" id="label-height">Height (cm):</label>
     <input type="number" id="height" name="height" min="50" max="250" required />
+
     <label for="age" id="label-age">Age (years):</label>
     <input type="number" id="age" name="age" min="5" max="120" required />
+
     <label for="gender" id="label-gender">Gender:</label>
     <select id="gender" name="gender" required>
       <option value="" disabled selected id="opt-select-gender">Select gender</option>
       <option value="male" id="opt-male">Male</option>
       <option value="female" id="opt-female">Female</option>
     </select>
+
     <label for="activity" id="label-activity">Activity Level:</label>
     <select id="activity" name="activity" required>
       <option value="" disabled selected id="opt-select-activity">Select activity</option>
@@ -226,6 +225,7 @@
       <option value="active" id="opt-active">Active (5-6 days/week)</option>
       <option value="very_active" id="opt-very-active">Very Active (7 days/week)</option>
     </select>
+
     <button type="submit" id="btn-calculate">Calculate</button>
   </form>
   <p id="equation-info">This website uses the Mifflin-St Jeor equation, which is considered the most accurate equation for calculating calorie needs.</p>
@@ -304,7 +304,8 @@
       }
     };
 
-    let currentLang = 'en';
+    let currentLang = 'en'; // ⬅️ اللغة الافتراضية هي الإنجليزية
+
     function toggleLanguage() {
       currentLang = currentLang === 'en' ? 'ar' : 'en';
       const t = texts[currentLang];
