--- a/cat-nutrition.html
+++ b/cat-nutrition.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Common Nutrition Mistakes</title>
+  <title>Nutrition for Cats</title>
 
- <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MFK8KTL6SS"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,6 @@
     gtag('js', new Date());
     gtag('config', 'G-MFK8KTL6SS');
   </script>
-
 
   <style>
     :root {
@@ -131,6 +130,21 @@
       font-size: 1.1rem;
     }
 
+    .back-link {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: var(--accent-color);
+      color: #000;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+
+    .back-link:hover {
+      background-color: #00c9a3;
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 1.4rem;
@@ -150,106 +164,104 @@
 </head>
 <body>
   <header>
-    <h1 id="page-title">Common Nutrition Mistakes</h1>
+    <h1 id="page-title">Nutrition for Cats</h1>
     <div>
       <button onclick="toggleTheme()">Switch Theme</button>
       <button onclick="toggleLanguage()">العربية</button>
     </div>
   </header>
 
-  <main id="content"></main>
+  <main id="content">
+    <!-- سيتم ملؤها بالجافاسكريبت -->
+  </main>
 
   <script>
     const content = {
       en: {
-        pageTitle: "Common Nutrition Mistakes",
+        pageTitle: "Nutrition for Cats",
         sections: [
           {
-            title: "💥 Cutting Phase Mistakes",
+            title: "🐱 Obligate Carnivores",
             items: [
-              "**Very Low Calories** – Slows metabolism, causes muscle loss and stalls fat loss.",
-              "**Cutting All Carbs** – Leads to low energy, flat muscles and poor gym performance.",
-              "**Excessive Cardio** – Burns muscle if paired with low calories.",
-              "**Repetitive Meals** – Body adapts, mood declines, results stall.",
-              "**Obsessing Over Scale** – Daily fluctuations aren’t progress. Use weekly trends and photos."
+              "**Cats must eat meat** – They cannot survive on plant-based diets.",
+              "**Taurine is essential** – A deficiency causes blindness and heart disease.",
+              "**High protein required** – At least 25-30% of their diet should be protein.",
+              "**Limited carb processing** – Their bodies aren’t designed to digest carbs efficiently."
             ]
           },
           {
-            title: "🍔 Bulking Phase Mistakes",
+            title: "💧 Water & Hydration",
             items: [
-              "**Too Many Calories** – Leads to fat gain, not muscle.",
-              "**Dirty Bulking** – Uncontrolled eating results in a bloated, unhealthy look.",
-              "**Not Tracking Protein** – Inadequate intake slows muscle growth.",
-              "**Skipping Cardio** – Affects heart health and fat control.",
-              "**Gaining Weight Too Fast** – Likely fat, not lean mass."
+              "**Cats drink very little water** – This puts their kidneys at risk.",
+              "**Wet food helps** – It provides 70-80% moisture, better than dry kibble.",
+              "**Use water fountains** – Running water attracts cats to drink more.",
+              "**Avoid milk** – It causes diarrhea; water is the only drink they need."
             ]
           },
           {
-            title: "🛑 Maintenance Phase Mistakes",
+            title: "🚫 Toxic Foods",
             items: [
-              "**Random Eating** – Without tracking, you slowly gain fat.",
-              "**Low Activity** – Lower burn = higher fat storage.",
-              "**No Clear Goal** – Leads to laziness and backsliding into old habits."
+              "**Onions & garlic** – Destroy red blood cells, leading to anemia.",
+              "**Chocolate** – Contains theobromine, toxic to cats.",
+              "**Grapes & raisins** – Can cause sudden kidney failure.",
+              "**Raw fish & eggs** – Contain enzymes that destroy vitamins."
             ]
           },
           {
-            title: "⚠️ Mistakes in All Phases",
+            title: "🐾 Life Stage Needs",
             items: [
-              "**Emotional Eating** – Eating when stressed, not hungry.",
-              "**Relying on Supplements** – They don’t fix a bad diet.",
-              "**Poor Sleep** – Slows recovery and fat loss.",
-              "**Comparing to Others** – Your body is unique.",
-              "**No Real Plan** – Intentions without tracking = failure.",
-              "**Not Using a Food Scale** – Eyeballing food leads to huge calorie errors."
+              "**Kittens need double calories** – For rapid growth and development.",
+              "**Adult cats need balanced meals** – To maintain healthy weight and organs.",
+              "**Senior cats need kidney support** – Lower phosphorus, higher moisture.",
+              "**Neutered cats need fewer calories** – Up to 30% less due to lower metabolism."
             ]
           }
         ],
-        footer: "Success isn’t about one perfect day. It’s about not messing up every day."
+        footer: "A healthy cat is a happy cat. Feed them right, and they'll thrive for years.",
+        backLink: "← Back to Guide"
       },
       ar: {
-        pageTitle: "أشهر الأخطاء الشائعة في التغذية",
+        pageTitle: "تغذية القطط",
         sections: [
           {
-            title: "💥 أخطاء مرحلة التنشيف",
+            title: "🐱 كائنات آكلة للحوم بالكامل",
             items: [
-              "**سعرات منخفضة جدًا** – تؤدي لتباطؤ الحرق وفقدان عضل وثبات الوزن.",
-              "**قطع الكارب تمامًا** – يسبب ضعف الأداء وشكل مسطح للجسم.",
-              "**كارديو مبالغ فيه** – ممكن يحرق عضل خصوصًا مع نقص الأكل.",
-              "**تكرار نفس الأكل** – الجسم يتأقلم، والمزاج يتعب.",
-              "**التركيز على الميزان** – الوزن بيتغير طبيعي. ركز على الصور والقياسات."
+              "**القطط يجب أن تأكل اللحوم** – لا يمكنها البقاء على قيد الحياة بالاعتماد على الأطعمة النباتية.",
+              "**التيروين ضروري جدًا** – نقصه يؤدي إلى العمى وأمراض القلب.",
+              "**تحتاج إلى بروتين عالي** – 25-30٪ من غذائها يجب أن يكون بروتين.",
+              "**لا تستطيع هضم الكربوهيدرات** – أجسامها ليست مصممة لذلك."
             ]
           },
           {
-            title: "🍔 أخطاء مرحلة التضخيم",
+            title: "💧 الماء والترطيب",
             items: [
-              "**سعرات كتير جدًا** – بتزود دهون مش عضل.",
-              "**أكل عشوائي** – يعمل جسم منتفخ وغير صحي.",
-              "**عدم تتبع البروتين** – يبطئ بناء العضلات.",
-              "**إهمال الكارديو** – يقلل اللياقة ويزود الدهون.",
-              "**زيادة وزن سريعة** – معناها دهون مش عضل."
+              "**القطط لا تشرب ماء كافيًا** – مما يعرض كليتها للخطر.",
+              "**الطعام الرطب يساعد** – يحتوي على 70-80٪ رطوبة، أفضل من الجاف.",
+              "**استخدم نوافير ماء** – الماء الجاري يجذب القطط للشرب أكثر.",
+              "**تجنب الحليب** – يسبب إسهال؛ الماء هو الشرب الوحيد المطلوب."
             ]
           },
           {
-            title: "🛑 أخطاء مرحلة الثبات",
+            title: "🚫 أطعمة سامة",
             items: [
-              "**أكل غير محسوب** – بيزود الوزن من غير ما تحس.",
-              "**قلة النشاط** – يقلل الحرق ويزود الدهون.",
-              "**غياب الهدف** – يخليك ترجع للعادات القديمة."
+              "**البصل والثوم** – يدمّران كريات الدم الحمراء ويسببان فقر الدم.",
+              "**الشوكولاتة** – تحتوي على مادة الساليسيلات السامة للقطط.",
+              "**العنب والزبيب** – قد يسببان فشل كلوي مفاجئ.",
+              "**الأسماك والبيض النيئ** – يحتويان على إنزيمات تدمر الفيتامينات."
             ]
           },
           {
-            title: "⚠️ أخطاء شائعة في كل المراحل",
+            title: "🐾 احتياجات المراحل العمرية",
             items: [
-              "**الأكل العاطفي** – بتاكل وانت مش جعان فعلًا.",
-              "**الاعتماد على المكملات** – مش هتعوض دايت ضعيف.",
-              "**قلة النوم** – تبطئ الحرق والتعافي.",
-              "**المقارنة بالناس** – جسمك ليه طريقه الخاص.",
-              "**نية بدون خطة** – النية من غير متابعة = فشل.",
-              "**عدم استخدام ميزان الأكل** – التقدير بالعين بيبوظ كل حاجة."
+              "**الهريرات تحتاج ضعف السعرات** – للنمو السريع والتطور.",
+              "**البالغون يحتاجون نظام متوازن** – للحفاظ على الوزن والأعضاء.",
+              "**المسنون يحتاجون دعم الكلى** – فوسفور أقل، رطوبة أعلى.",
+              "**القطط المخصية تحتاج سعرات أقل** – حتى 30٪ أقل بسبب تباطؤ الأيض."
             ]
           }
         ],
-        footer: "النجاح مش في يوم مثالي، النجاح في إنك ما تغلطش كل يوم."
+        footer: "القطة الصحية هي قطة سعيدة. غذّها بشكل صحيح، وستعيش بصحة لسنوات.",
+        backLink: "← العودة إلى الدليل"
       }
     };
 
@@ -283,6 +295,13 @@
       const footer = document.createElement("p");
       footer.textContent = lang.footer;
       main.appendChild(footer);
+
+      // إضافة زر العودة
+      const backLink = document.createElement("a");
+      backLink.href = "ANIMAL-EDUCATE.HTML";
+      backLink.className = "back-link";
+      backLink.textContent = lang.backLink;
+      main.appendChild(backLink);
     }
 
     function toggleTheme() {
@@ -294,6 +313,7 @@
       renderContent();
     }
 
+    // تحميل المحتوى عند فتح الصفحة
     renderContent();
   </script>
 </body>
