--- a/dog-nutrition.html
+++ b/dog-nutrition.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Common Nutrition Mistakes</title>
+  <title>Nutrition for Dogs</title>
 
- <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MFK8KTL6SS"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,6 @@
     gtag('js', new Date());
     gtag('config', 'G-MFK8KTL6SS');
   </script>
-
 
   <style>
     :root {
@@ -131,6 +130,21 @@
       font-size: 1.1rem;
     }
 
+    .back-link {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: var(--accent-color);
+      color: #000;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+
+    .back-link:hover {
+      background-color: #00c9a3;
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 1.4rem;
@@ -150,106 +164,104 @@
 </head>
 <body>
   <header>
-    <h1 id="page-title">Common Nutrition Mistakes</h1>
+    <h1 id="page-title">Nutrition for Dogs</h1>
     <div>
       <button onclick="toggleTheme()">Switch Theme</button>
       <button onclick="toggleLanguage()">العربية</button>
     </div>
   </header>
 
-  <main id="content"></main>
+  <main id="content">
+    <!-- سيتم ملؤها بالجافاسكريبت -->
+  </main>
 
   <script>
     const content = {
       en: {
-        pageTitle: "Common Nutrition Mistakes",
+        pageTitle: "Nutrition for Dogs",
         sections: [
           {
-            title: "💥 Cutting Phase Mistakes",
+            title: "🐶 Balanced Diet Essentials",
             items: [
-              "**Very Low Calories** – Slows metabolism, causes muscle loss and stalls fat loss.",
-              "**Cutting All Carbs** – Leads to low energy, flat muscles and poor gym performance.",
-              "**Excessive Cardio** – Burns muscle if paired with low calories.",
-              "**Repetitive Meals** – Body adapts, mood declines, results stall.",
-              "**Obsessing Over Scale** – Daily fluctuations aren’t progress. Use weekly trends and photos."
+              "**Protein is key** – Dogs need 18-25% protein for muscle maintenance and energy.",
+              "**Calcium to Phosphorus Ratio** – Must be 1.4:1 for healthy bone development.",
+              "**Carbs are okay in moderation** – Rice, oats, and sweet potatoes are great energy sources.",
+              "**Avoid fillers** – Corn, soy, and by-products offer little nutrition."
             ]
           },
           {
-            title: "🍔 Bulking Phase Mistakes",
+            title: "🚫 Toxic Foods to Avoid",
             items: [
-              "**Too Many Calories** – Leads to fat gain, not muscle.",
-              "**Dirty Bulking** – Uncontrolled eating results in a bloated, unhealthy look.",
-              "**Not Tracking Protein** – Inadequate intake slows muscle growth.",
-              "**Skipping Cardio** – Affects heart health and fat control.",
-              "**Gaining Weight Too Fast** – Likely fat, not lean mass."
+              "**Chocolate** – Contains theobromine, which is deadly for dogs.",
+              "**Grapes & Raisins** – Can cause sudden kidney failure.",
+              "**Onions & Garlic** – Destroy red blood cells, leading to anemia.",
+              "**Xylitol** – Found in gum and sugar-free products, causes liver failure."
             ]
           },
           {
-            title: "🛑 Maintenance Phase Mistakes",
+            title: "🐾 Life Stage Needs",
             items: [
-              "**Random Eating** – Without tracking, you slowly gain fat.",
-              "**Low Activity** – Lower burn = higher fat storage.",
-              "**No Clear Goal** – Leads to laziness and backsliding into old habits."
+              "**Puppies need 2-3x more calories** – For rapid growth and brain development.",
+              "**Adults need maintenance calories** – To keep weight stable and organs healthy.",
+              "**Seniors need joint support** – Add glucosamine and reduce fat intake.",
+              "**Neutered dogs need 20-30% fewer calories** – Due to lower metabolism."
             ]
           },
           {
-            title: "⚠️ Mistakes in All Phases",
+            title: "💧 Hydration & Feeding Tips",
             items: [
-              "**Emotional Eating** – Eating when stressed, not hungry.",
-              "**Relying on Supplements** – They don’t fix a bad diet.",
-              "**Poor Sleep** – Slows recovery and fat loss.",
-              "**Comparing to Others** – Your body is unique.",
-              "**No Real Plan** – Intentions without tracking = failure.",
-              "**Not Using a Food Scale** – Eyeballing food leads to huge calorie errors."
+              "**Always provide fresh water** – Dehydration can happen quickly.",
+              "**Feed at consistent times** – Helps digestion and behavior.",
+              "**Avoid overfeeding** – Obesity is a leading health issue in dogs.",
+              "**Mix wet and dry food** – Improves palatability and hydration."
             ]
           }
         ],
-        footer: "Success isn’t about one perfect day. It’s about not messing up every day."
+        footer: "A well-fed dog is a happy, healthy companion. Feed them right, and they'll be by your side for years.",
+        backLink: "← Back to Guide"
       },
       ar: {
-        pageTitle: "أشهر الأخطاء الشائعة في التغذية",
+        pageTitle: "تغذية الكلاب",
         sections: [
           {
-            title: "💥 أخطاء مرحلة التنشيف",
+            title: "🐶 أساسيات النظام المتوازن",
             items: [
-              "**سعرات منخفضة جدًا** – تؤدي لتباطؤ الحرق وفقدان عضل وثبات الوزن.",
-              "**قطع الكارب تمامًا** – يسبب ضعف الأداء وشكل مسطح للجسم.",
-              "**كارديو مبالغ فيه** – ممكن يحرق عضل خصوصًا مع نقص الأكل.",
-              "**تكرار نفس الأكل** – الجسم يتأقلم، والمزاج يتعب.",
-              "**التركيز على الميزان** – الوزن بيتغير طبيعي. ركز على الصور والقياسات."
+              "**البروتين هو الأساس** – تحتاج الكلاب إلى 18-25٪ بروتين للحفاظ على العضلات والطاقة.",
+              "**نسبة الكالسيوم إلى الفوسفور** – يجب أن تكون 1.4:1 لنمو العظام السليم.",
+              "**الكربوهيدرات مقبولة بكميات معتدلة** – مثل الأرز والشوفان والبطاطا الحلوة.",
+              "**تجنب المواد المالئة** – الذرة وفول الصويا لا تقدم قيمة غذائية."
             ]
           },
           {
-            title: "🍔 أخطاء مرحلة التضخيم",
+            title: "🚫 أطعمة سامة يجب تجنبها",
             items: [
-              "**سعرات كتير جدًا** – بتزود دهون مش عضل.",
-              "**أكل عشوائي** – يعمل جسم منتفخ وغير صحي.",
-              "**عدم تتبع البروتين** – يبطئ بناء العضلات.",
-              "**إهمال الكارديو** – يقلل اللياقة ويزود الدهون.",
-              "**زيادة وزن سريعة** – معناها دهون مش عضل."
+              "**الشوكولاتة** – تحتوي على مادة الساليسيلات السامة والقاتلة.",
+              "**العنب والزبيب** – قد يسببان فشل كلوي مفاجئ.",
+              "**البصل والثوم** – يدمّران كريات الدم الحمراء ويؤديان لفقر الدم.",
+              "**الزيليتول** – يوجد في العلك والمنتجات الخالية من السكر، ويسبب فشل كبدى."
             ]
           },
           {
-            title: "🛑 أخطاء مرحلة الثبات",
+            title: "🐾 احتياجات المراحل العمرية",
             items: [
-              "**أكل غير محسوب** – بيزود الوزن من غير ما تحس.",
-              "**قلة النشاط** – يقلل الحرق ويزود الدهون.",
-              "**غياب الهدف** – يخليك ترجع للعادات القديمة."
+              "**الجراء يحتاجون ضعف السعرات** – للنمو السريع وتطور الدماغ.",
+              "**البالغون يحتاجون سعرات ثابتة** – للحفاظ على الوزن والأعضاء.",
+              "**المسنون يحتاجون دعم للمفاصل** – أضف الجلوكوزامين وقلل الدهون.",
+              "**الكلاب المخصية تحتاج سعرات أقل** – حتى 30٪ أقل بسبب تباطؤ الأيض."
             ]
           },
           {
-            title: "⚠️ أخطاء شائعة في كل المراحل",
+            title: "💧 الترطيب ونصائح التغذية",
             items: [
-              "**الأكل العاطفي** – بتاكل وانت مش جعان فعلًا.",
-              "**الاعتماد على المكملات** – مش هتعوض دايت ضعيف.",
-              "**قلة النوم** – تبطئ الحرق والتعافي.",
-              "**المقارنة بالناس** – جسمك ليه طريقه الخاص.",
-              "**نية بدون خطة** – النية من غير متابعة = فشل.",
-              "**عدم استخدام ميزان الأكل** – التقدير بالعين بيبوظ كل حاجة."
+              "**قدم ماء نقي دائمًا** – الجفاف يمكن أن يحدث بسرعة.",
+              "**أطعم في أوقات منتظمة** – يساعد على الهضم والسلوك.",
+              "**تجنب الإفراط في الإطعام** – السمنة من أكبر مشاكل الصحة.",
+              "**اخلط الطعام الرطب مع الجاف** – يحسن الطعم والترطيب."
             ]
           }
         ],
-        footer: "النجاح مش في يوم مثالي، النجاح في إنك ما تغلطش كل يوم."
+        footer: "الكلب المُغذّى جيدًا هو رفيق سعيد وصحي. غذّه بشكل صحيح، وسيبقى بجانبك لسنوات.",
+        backLink: "← العودة إلى الدليل"
       }
     };
 
@@ -283,6 +295,13 @@
       const footer = document.createElement("p");
       footer.textContent = lang.footer;
       main.appendChild(footer);
+
+      // إضافة زر العودة
+      const backLink = document.createElement("a");
+      backLink.href = "ANIMAL-EDUCATE.HTML";
+      backLink.className = "back-link";
+      backLink.textContent = lang.backLink;
+      main.appendChild(backLink);
     }
 
     function toggleTheme() {
@@ -294,6 +313,7 @@
       renderContent();
     }
 
+    // تحميل المحتوى عند فتح الصفحة
     renderContent();
   </script>
 </body>
