--- a/animal-educate.html
+++ b/animal-educate.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Educate Yourself</title>
+  <title>Animal Nutrition Guide</title>
 
- <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MFK8KTL6SS"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -22,8 +22,10 @@
       --box-bg: #1f1f1f;
       --footer-bg: #00ffd5;
       --footer-text: black;
+      --gradient-start: #0a0a0a;
+      --gradient-mid: #111;
+      --gradient-end: #0d0d0d;
     }
-
     body.light-mode {
       --bg-color: #ffffff;
       --text-color: #000000;
@@ -31,61 +33,60 @@
       --box-bg: #f0f0f0;
       --footer-bg: #dddddd;
       --footer-text: #000000;
+      --gradient-start: #f5f5f5;
+      --gradient-mid: #fff;
+      --gradient-end: #f7f7f7;
     }
-
     body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      font-family: Arial, sans-serif;
+      margin: 0;
       padding: 20px;
+      min-height: 100vh;
+      font-family: Arial, sans-serif;
       text-align: center;
-      transition: background-color 0.3s, color 0.3s;
+      color: var(--text-color);
+      background: linear-gradient(-45deg, var(--gradient-start), var(--gradient-mid), var(--gradient-end));
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      transition: all 0.5s ease;
     }
-
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
     h1 {
       color: var(--accent-color);
       margin-bottom: 30px;
+      font-size: 2.5rem;
     }
-
     .link-list {
       display: flex;
       flex-direction: column;
       gap: 16px;
-      max-width: 400px;
+      max-width: 500px;
       margin: 0 auto 40px;
     }
-
     .link-list a {
       background-color: var(--box-bg);
       color: var(--text-color);
-      padding: 15px;
+      padding: 16px;
       border-radius: 10px;
       text-decoration: none;
       font-size: 18px;
       font-weight: bold;
       box-shadow: 0 0 12px rgba(0, 255, 213, 0.2);
-      transition: background-color 0.3s;
+      transition: all 0.3s ease;
     }
-
     .link-list a:hover {
       background-color: var(--accent-color);
       color: #000;
+      transform: scale(1.02);
     }
-
-    #diet-organizer {
-      background-color: #00ffd5;
-      color: #000;
-      animation: pulse 1.5s infinite;
-      font-size: 20px;
-      font-weight: bold;
-      border: 2px solid #00ffd5;
-      text-shadow: 1px 1px #000;
-    }
-
-    #common-mistakes-btn {
+    /* ✅ زر الأخطاء الشائعة - أحمر وله ووميض */
+    #animal-common-mistakes-btn {
       background-color: #cc0000;
       color: white;
-      padding: 15px;
+      padding: 16px;
       border-radius: 10px;
       text-decoration: none;
       font-size: 18px;
@@ -95,31 +96,28 @@
       border: none;
       animation: light-pulse 2.5s infinite;
     }
-
-    #common-mistakes-btn:hover {
+    #animal-common-mistakes-btn:hover {
       background-color: #e60000;
       color: #000;
     }
-
-    body.light-mode #common-mistakes-btn {
-      background-color: #ff4d4d;
-      color: white;
-      box-shadow: 0 0 12px rgba(255, 77, 77, 0.3);
-    }
-
-    body.light-mode #common-mistakes-btn:hover {
-      background-color: #ff1a1a;
-      color: #000;
-    }
-
+    /* تأثير الووميض (النبض) */
     @keyframes light-pulse {
       0% { transform: scale(1); box-shadow: 0 0 5px rgba(255, 0, 0, 0.2); }
       50% { transform: scale(1.02); box-shadow: 0 0 12px rgba(255, 0, 0, 0.3); }
       100% { transform: scale(1); box-shadow: 0 0 5px rgba(255, 0, 0, 0.2); }
     }
-
+    /* دعم الوضع النهاري */
+    body.light-mode #animal-common-mistakes-btn {
+      background-color: #ff4d4d;
+      color: white;
+      box-shadow: 0 0 12px rgba(255, 77, 77, 0.3);
+    }
+    body.light-mode #animal-common-mistakes-btn:hover {
+      background-color: #ff1a1a;
+      color: #000;
+    }
     footer {
-      margin-top: 40px;
+      margin-top: 50px;
       font-size: 12px;
       color: var(--footer-text);
       background-color: var(--footer-bg);
@@ -129,7 +127,6 @@
       margin-left: auto;
       margin-right: auto;
     }
-
     #controls {
       position: fixed;
       top: 10px;
@@ -139,7 +136,6 @@
       gap: 10px;
       z-index: 999;
     }
-
     .toggle-btn {
       padding: 6px 10px;
       background-color: var(--accent-color);
@@ -149,17 +145,9 @@
       cursor: pointer;
       font-size: 14px;
       font-weight: bold;
-      transition: background-color 0.3s;
     }
-
     .toggle-btn:hover {
       background-color: #00c9a3;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); box-shadow: 0 0 0 rgba(0, 255, 213, 0.7); }
-      50% { transform: scale(1.05); box-shadow: 0 0 15px rgba(0, 255, 213, 0.9); }
-      100% { transform: scale(1); box-shadow: 0 0 0 rgba(0, 255, 213, 0.7); }
     }
 
     /* ✅ زر العودة للصفحة الرئيسية */
@@ -185,23 +173,24 @@
     }
   </style>
 </head>
-<body>
+<body class="theme-dark">
   <div id="controls">
     <button class="toggle-btn" onclick="toggleTheme()">Toggle Theme</button>
     <button class="toggle-btn" onclick="toggleLanguage()">🇬🇧 / 🇸🇦</button>
   </div>
 
-  <h1 id="main-title">Educate Yourself</h1>
+  <h1 id="main-title">Educate Yourself About Pets</h1>
 
   <div class="link-list">
-    <a href="macro-guide.html" id="link1">Macro Nutrition Guide</a>
-    <a href="bmr.html" id="link2">What is BMR?</a>
-    <a href="tdee.html" id="link3">What is TDEE?</a>
-    <a href="meal-plan.html" id="link4">How to Build a Meal Plan</a>
-    <a href="food-list.html" id="link5">Ultimate Food List</a>
-    <a href="supplements.html" id="link6">Supplements Explained</a>
-    <a href="common-mistakes.html" id="common-mistakes-btn">⚠️ Common Mistakes</a>
-    <a href="organize-diet.html" id="diet-organizer">🍽️ Organize Your Diet</a>
+    <a href="nrc-equation.html" id="link1">The NRC Equation Explained</a>
+    <a href="cat-nutrition.html" id="link2">Nutrition for Cats</a>
+    <a href="dog-nutrition.html" id="link3">Nutrition for Dogs</a>
+    <a href="life-stages.html" id="link4">Life Stage Needs</a>
+    <a href="toxic-foods.html" id="link5">Toxic Foods to Avoid</a>
+    <a href="water-importance.html" id="link6">Importance of Water</a>
+    <!-- ✅ الزر الأحمر مع التأثير -->
+    <a href="animal-common-mistakes.html" id="animal-common-mistakes-btn">⚠️ Common Feeding Mistakes</a>
+    <!-- ✅ تم حذف الزر الأخير: "Calculate Your Pet's Calories" -->
   </div>
 
   <!-- ✅ زر العودة للصفحة الرئيسية -->
@@ -209,37 +198,37 @@
 
   <footer>
     Made by Mohab (
-      <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
+    <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
     )
   </footer>
 
   <script>
     function openInstagram() {
       const appLink = "instagram://user?username=r4_ce";
-      const webLink = "  https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
+      const webLink = "https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
       window.location = appLink;
       setTimeout(() => {
         window.location = webLink;
       }, 1500);
     }
 
-    let isArabic = false;
-
     function toggleTheme() {
-      document.body.classList.toggle('light-mode');
+      document.body.classList.toggle("light-mode");
     }
+
+    let isArabic = false;
 
     function toggleLanguage() {
       isArabic = !isArabic;
-      document.getElementById('main-title').textContent = isArabic ? 'علّم نفسك' : 'Educate Yourself';
-      document.getElementById('link1').textContent = isArabic ? 'دليل المغذيات الكبرى' : 'Macro Nutrition Guide';
-      document.getElementById('link2').textContent = isArabic ? 'ما هو معدل الأيض الأساسي (BMR)?' : 'What is BMR?';
-      document.getElementById('link3').textContent = isArabic ? 'ما هو TDEE؟' : 'What is TDEE?';
-      document.getElementById('link4').textContent = isArabic ? 'كيف تصمم خطة وجبات؟' : 'How to Build a Meal Plan';
-      document.getElementById('link5').textContent = isArabic ? 'قائمة الأطعمة النهائية' : 'Ultimate Food List';
-      document.getElementById('link6').textContent = isArabic ? 'شرح المكملات الغذائية' : 'Supplements Explained';
-      document.getElementById('common-mistakes-btn').textContent = isArabic ? '⚠️ أخطاء شائعة' : '⚠️ Common Mistakes';
-      document.getElementById('diet-organizer').textContent = isArabic ? '🍽️ نظّم أكلك' : '🍽️ Organize Your Diet';
+      document.getElementById('main-title').textContent = isArabic ? 'تعلم عن تغذية الحيوانات' : 'Educate Yourself About Pets';
+      document.getElementById('link1').textContent = isArabic ? 'شرح معادلة NRC' : 'The NRC Equation Explained';
+      document.getElementById('link2').textContent = isArabic ? 'تغذية القطط' : 'Nutrition for Cats';
+      document.getElementById('link3').textContent = isArabic ? 'تغذية الكلاب' : 'Nutrition for Dogs';
+      document.getElementById('link4').textContent = isArabic ? 'احتياجات المراحل العمرية' : 'Life Stage Needs';
+      document.getElementById('link5').textContent = isArabic ? 'أطعمة سامة يجب تجنبها' : 'Toxic Foods to Avoid';
+      document.getElementById('link6').textContent = isArabic ? 'أهمية الماء' : 'Importance of Water';
+      document.getElementById('animal-common-mistakes-btn').textContent = isArabic ? '⚠️ أخطاء شائعة في التغذية' : '⚠️ Common Feeding Mistakes';
+      // ✅ تم حذف السطر الخاص بالزر الأخير
     }
   </script>
 </body>
